--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kludge.wakemeup">
 
+    <uses-permission android:name ="android.permission.WAKE_LOCK"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainAlarm"
             android:configChanges="orientation|keyboardHidden"
@@ -30,6 +33,7 @@
             android:exported="true"></service>
 
         <receiver android:name=".AlarmReceiver" />
+
     </application>
 
 </manifest>
