--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
 
         </activity>
 
-        <activity android:name=".AlarmWake" />
+        <activity android:name=".AlarmWake"
+                  android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
             android:name=".InputAlarm"
