--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_alarm"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -55,6 +55,7 @@
             android:exported="true"/>
 
         <receiver android:name=".AlarmReceiver"/>
+        <receiver android:name=".NotificationReceiver"/>
 
     </application>
 
