--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.kludge.wakemeup">
+    package="com.kludge.wakemeup">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
@@ -16,10 +16,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_alarm"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainAlarm"
             android:configChanges="orientation|keyboardHidden"
@@ -27,32 +26,28 @@
             android:launchMode="singleInstance"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".InputAlarm"
             android:label="@string/input_alarm_name"
             android:parentActivityName=".MainAlarm"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".MainPreference"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainAlarm" />
-
+        <activity
+            android:name=".MainPreference"
+            android:parentActivityName=".MainAlarm"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AlarmWake"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".MathGameActivity"
             android:parentActivityName=".AlarmWake"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".PongGameActivity"
             android:parentActivityName=".AlarmWake"
@@ -61,32 +56,32 @@
         <service
             android:name=".RingtoneService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
-        <receiver android:name=".AlarmReceiver"/>
-        <receiver android:name=".NotificationReceiver"/>
+        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".NotificationReceiver" />
 
-        <activity
-            android:name=".GCMRegisterActivity">
-        </activity>
+        <activity android:name=".GCMRegisterActivity"></activity>
 
         <!-- [START gcm_receiver] -->
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="com.kludge.wakemeup" />
             </intent-filter>
         </receiver>
         <!-- [END gcm_receiver] -->
 
+
         <!-- [START gcm_listener] -->
         <service
             android:name=".GCMListenerService"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter android:priority="10000">
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -97,24 +92,20 @@
             android:name=".GCMInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
         <!-- [END instanceId_listener] -->
 
         <service
             android:name=".GCMRegistrationIntentService"
-            android:exported="false">
-        </service>
-
+            android:exported="false"></service>
         <service
             android:name=".GCMResponseService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
 
-        <activity android:name=".MessagingActivity">
-        </activity>
-
+        <activity android:name=".MessagingActivity"></activity>
+        <activity android:name=".ScoreboardActivity"></activity>
     </application>
 
 </manifest>
