--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+apply plugin: 'maven'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
 
@@ -26,9 +27,13 @@ apply plugin: 'com.android.application'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile "com.google.android.gms:play-services-gcm:9.0.0"
+
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.google.android.gms:play-services-gcm:9.0.0'
+    compile 'com.google.apis:google-api-services-datastore:v1beta2-rev31-1.22.0'
+    compile 'com.googlecode.objectify:objectify:5.0.3'
+    compile project(path: ':wmu_datastore', configuration: 'android-endpoints')
 }
 
 
