--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
             android:exported="true" />
 
         <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".WakerReceiver"/>
         <receiver android:name=".NotificationReceiver" />
 
         <activity android:name=".GCMRegisterActivity" />
