Separated GCMRegisterActivity and GCMRequestActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,7 @@
 
         <activity android:name=".MessagingActivity" />
         <activity android:name=".ScoreboardActivity" />
+        <activity android:name=".GCMRequestActivity"/>
     </application>
 
 </manifest>
