--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
-
-apply plugin: 'maven'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.android.application'
-
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -30,11 +32,16 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:23.0.0'
-    compile 'com.google.android.gms:play-services-gcm:9.0.0'
+    //compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.google.firebase:firebase-messaging:9.2.1'
+    compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-storage:9.2.1'
     compile 'com.google.apis:google-api-services-datastore:v1beta2-rev31-1.22.0'
     compile 'com.googlecode.objectify:objectify:5.0.3'
     compile project(path: ':wmu_datastore', configuration: 'android-endpoints')
 }
 
-
+apply plugin: 'maven'
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
