--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:23.0.0'
     //compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.google.firebase:firebase-messaging:9.2.1'
     compile 'com.google.firebase:firebase-core:9.2.1'
     compile 'com.google.firebase:firebase-storage:9.2.1'
-    compile 'com.google.apis:google-api-services-datastore:v1beta2-rev31-1.22.0'
-    compile 'com.googlecode.objectify:objectify:5.0.3'
     compile project(path: ':wmu_datastore', configuration: 'android-endpoints')
 }
 
