--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:design:23.0.0'
-    //compile 'com.google.android.gms:play-services-gcm:9.2.1'
-    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.google.firebase:firebase-messaging:9.2.1'
     compile 'com.google.firebase:firebase-core:9.2.1'
+    compile 'com.google.firebase:firebase-auth:9.2.1'
+    compile 'com.google.android.gms:play-services-auth:9.2.1'
     compile 'com.google.firebase:firebase-storage:9.2.1'
-    compile project(path: ':wmu_datastore', configuration: 'android-endpoints')
+    compile 'com.google.firebase:firebase-database:9.2.1'
 }
 
 apply plugin: 'maven'
