--- a/fcm_backend/build.gradle
+++ b/fcm_backend/build.gradle
@@ -22,21 +22,17 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-  appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.28'
-  compile 'com.google.appengine:appengine-endpoints:1.9.28'
-  compile 'com.google.appengine:appengine-endpoints-deps:1.9.28'
-  compile 'javax.servlet:servlet-api:2.5'
-
+    appengineSdk 'com.google.appengine:appengine-java-sdk:1.9.28'
+    compile 'javax.servlet:servlet-api:2.5'
+    compile files('libs/gcm.jar')
+    compile files('build/libs/gcm-server-1.0.2.jar')
+    compile files('build/libs/json-simple-1.1.1.jar')
+    compile 'com.ganyo:gcm-server:1.0.2'
 }
-
 
 appengine {
   downloadSdk = true
   appcfg {
     oauth2 = true
-  }
-  endpoints {
-    getClientLibsOnBuild = true
-    getDiscoveryDocsOnBuild = true
   }
 }
